--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "svg-minifier",
-    "version": "1.0.0",
-    "description": "svg-minifier",
+    "version": "1.0.1",
+    "description": "A tool to minify svg files",
     "main": "lib/index.js",
     "scripts": {
         "test": "node ./test/test.js",
@@ -22,14 +22,14 @@
         "svgo": "^2.8.0"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.18.6",
-        "@tabler/icons": "^1.72.0",
+        "@babel/preset-env": "^7.18.10",
+        "@tabler/icons": "^1.82.0",
         "babel-loader": "^8.2.5",
-        "eslint": "^8.18.0",
+        "eslint": "^8.22.0",
         "eslint-config-plus": "^1.0.3",
-        "eslint-plugin-html": "^6.2.0",
+        "eslint-plugin-html": "^7.1.0",
         "heroicons": "^1.0.6",
-        "webpack": "^5.73.0",
+        "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0"
     }
 }
