--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "eslint-config-plus": "^1.0.3",
         "eslint-plugin-html": "^7.1.0",
         "heroicons": "^2.0.4",
+        "super-tiny-icons": "^0.4.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0"
     }
