--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ],
     "dependencies": {
         "cheerio": "^1.0.0-rc.10",
+        "console-grid": "^2.0.0",
         "eight-colors": "^1.0.2",
         "ignore": "^5.2.0",
         "lz-utils": "^1.0.5",
