--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
     "scripts": {
         "test": "node ./test/test.js"
     },
+    "files": [
+        "lib"
+    ],
+    "license": "MIT",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/cenfun/svg-minifier.git"
     },
-    "files": [
-        "lib"
-    ],
     "dependencies": {
         "cheerio": "^1.0.0-rc.10",
-        "console-grid": "^2.0.0",
-        "eight-colors": "^1.0.2",
-        "ignore": "^5.2.0",
-        "lz-utils": "^1.0.5",
-        "svgo": "^2.8.0",
-        "umd-runtime-templates": "^1.0.1"
+        "console-grid": "^2.2.2",
+        "eight-colors": "^1.3.0",
+        "ignore": "^5.3.1",
+        "svgo": "^3.2.0",
+        "umd-runtime-templates": "^2.0.0"
     },
     "devDependencies": {
-        "@tabler/icons": "^1.92.0",
+        "@tabler/icons": "^3.2.0",
         "eslint": "^8.23.0",
-        "eslint-config-plus": "^1.0.3",
-        "eslint-plugin-html": "^7.1.0",
-        "heroicons": "^2.0.10",
-        "super-tiny-icons": "^0.4.0"
+        "eslint-config-plus": "^1.0.6",
+        "eslint-plugin-html": "^8.1.1",
+        "heroicons": "^2.1.3",
+        "super-tiny-icons": "^0.6.0"
     }
 }
