--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "A tool to minify svg files",
     "main": "lib/index.js",
     "scripts": {
-        "test": "node ./test/test.js"
+        "test": "node ./test/test.js",
+        "patch": "npm run test && sf publish patch -r"
     },
     "files": [
         "lib"
